--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	<p>Ingeniero en alimentos con experiencia en Sistemas Integrados de Gestión, control de gestión</p>
 
 	<h2>HABILIDADES</h2> 
-<ul>
+<ol>
 	<li>Liderazgo</li>
 	<li>Trabajo en equipo</li>
 	<li>Manejo Excel intermedio</li>
 	<li>Gestión de personal</li>
-</ul>
+</ol>
 
 	<h2>FORMACIÓN ACADEMICA</h2>
 <table>
@@ -75,7 +75,11 @@
 	<tr>
 </table>
 
-	<h2>LOCALIZACIÓN LABORAL</h2>
+	<h3> HOBBIES</h3>
+	<p> Me encanta viajar a distintos lugares, dentro y fuera de Chile y fotografiar paisajes, personas y objetos.</p>
+	<img src="viaje1.jpg.JPG" with= "1000" height="300">
+
+	<h3>LOCALIZACIÓN LABORAL</h3>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.6874528577027!2d-70.74475638500428!3d-33.37922488079426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c0de22e91cd1%3A0x284ff7deb8316c3c!2sManantial!5e0!3m2!1ses-419!2scl!4v1526599708122" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </body>
